--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,4 +1,9 @@
 jdk:
   - openjdk21
+before_install:
+  - echo "JitPack VERSION env: $VERSION"
+  - VERSION_STRIPPED=${VERSION#v}
+  - echo "Setting project version to: $VERSION_STRIPPED"
+  - mvn -B -ntp -q versions:set -DnewVersion=${VERSION_STRIPPED} -DprocessAllModules=true -DgenerateBackupPoms=false
 install:
   - mvn -B -ntp -DskipTests install
