--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,17 +6,12 @@ on:
       - 'v*'
   workflow_dispatch:
 
-permissions:
-  contents: read
-  packages: write
-
-concurrency:
-  group: build-publish-${{ github.ref }}
-  cancel-in-progress: true
-
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -29,10 +24,6 @@ jobs:
           distribution: 'temurin'
           java-version: '21'
           cache: 'maven'
-          # This writes a <server> block to ~/.m2/settings.xml with id "github"
-          server-id: github
-          server-username: ${{ github.actor }}
-          server-password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set project version from tag
         if: startsWith(github.ref, 'refs/tags/v')
@@ -47,11 +38,10 @@ jobs:
             -DgenerateBackupPoms=false
 
       - name: Build
-        run: mvn -B -ntp -U -DskipTests install
+        run: mvn -B -ntp install
 
       - name: Deploy to GitHub Packages
         if: startsWith(github.ref, 'refs/tags/v')
         env:
-          GITHUB_ACTOR: ${{ github.actor }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: mvn -B -ntp -DskipTests deploy -DaltDeploymentRepository=github::default::https://maven.pkg.github.com/${{ github.repository }}
+        run: mvn --batch-mode deploy
