--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.github.roleplaycauldron</groupId>
+  <groupId>com.github.roleplay-cauldron</groupId>
   <artifactId>spellbook</artifactId>
   <version>0.0.1</version>
   <packaging>pom</packaging>
@@ -64,7 +64,7 @@
       <dependency>
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-lang3</artifactId>
-        <version>3.17.0</version>
+        <version>3.18.0</version>
       </dependency>
       <dependency>
         <groupId>com.mysql</groupId>
