--- a/database/pom.xml
+++ b/database/pom.xml
@@ -21,8 +21,8 @@
 
   <dependencies>
     <dependency>
-      <groupId>com.mysql</groupId>
-      <artifactId>mysql-connector-j</artifactId>
+      <groupId>com.github.roleplay-cauldron</groupId>
+      <artifactId>spellbook-core</artifactId>
     </dependency>
 
     <dependency>
