--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,11 @@
   <dependencyManagement>
     <dependencies>
       <dependency>
+        <groupId>com.github.roleplay-cauldron</groupId>
+        <artifactId>spellbook-core</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
         <groupId>io.papermc.paper</groupId>
         <artifactId>paper-api</artifactId>
         <version>1.21.1-R0.1-SNAPSHOT</version>
@@ -65,11 +70,6 @@
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-lang3</artifactId>
         <version>3.18.0</version>
-      </dependency>
-      <dependency>
-        <groupId>com.mysql</groupId>
-        <artifactId>mysql-connector-j</artifactId>
-        <version>9.2.0</version>
       </dependency>
       <dependency>
         <groupId>org.jetbrains</groupId>
