--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,9 +1,12 @@
 jdk:
   - openjdk21
 before_install:
+  - "sdk install maven 3.9.6"
+  - "sdk use maven 3.9.6"
+  - "mvn -version"
   - "echo 'JitPack VERSION env: $VERSION'"
   - "VERSION_STRIPPED=${VERSION#v}"
   - "echo 'Setting project version to: '$VERSION_STRIPPED"
   - "mvn -B -ntp -q versions:set -DnewVersion=$VERSION_STRIPPED -DprocessAllModules=true -DgenerateBackupPoms=false"
 install:
-  - "mvn -B -ntp install -Dmaven.javadoc.skip=true"
+  - "mvn -B -ntp install"
