added bungeecord-api and velocity-api as provided for the scheduler

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -30,5 +30,15 @@
       <artifactId>paper-api</artifactId>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>com.velocitypowered</groupId>
+      <artifactId>velocity-api</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>net.md-5</groupId>
+      <artifactId>bungeecord-api</artifactId>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 </project>
