--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,11 @@
       <id>papermc</id>
       <url>https://repo.papermc.io/repository/maven-public/</url>
     </repository>
+
+    <repository>
+      <id>bungeecord-repo</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+    </repository>
   </repositories>
 
   <modules>
@@ -64,6 +69,19 @@
         <groupId>io.papermc.paper</groupId>
         <artifactId>paper-api</artifactId>
         <version>1.21.1-R0.1-SNAPSHOT</version>
+        <scope>provided</scope>
+      </dependency>
+      <dependency>
+        <groupId>com.velocitypowered</groupId>
+        <artifactId>velocity-api</artifactId>
+        <version>3.5.0-SNAPSHOT</version>
+        <scope>provided</scope>
+      </dependency>
+      <dependency>
+        <groupId>net.md-5</groupId>
+        <artifactId>bungeecord-api</artifactId>
+        <version>1.21-R0.1-SNAPSHOT</version>
+        <type>jar</type>
         <scope>provided</scope>
       </dependency>
       <dependency>
